[package]
name = "bevy_pyree"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = [] }
bevy_rosc = "0.5.0"
bevy-inspector-egui = "0.14"
rosc = "0.9.1"

[dev-dependencies]
bevy = { version = "0.9", default-features = true }
bevy_egui = "0.17.1"

[profile.dev.package."*"]
opt-level = 3